<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="25dp"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="0dp"
    android:background="@color/purple_700"
    android:padding="5dp">

    <EditText
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="40dp"
        android:background="@color/white"
        android:gravity="center"
        android:textColor="@color/purple_100"
        android:textSize="40sp"
        android:textStyle="bold"
        android:padding="60dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        >
        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_700"
            android:text="@string/one"
            android:textStyle="bold"
            android:textSize="25sp"
            android:padding="20dp"
            android:layout_marginHorizontal="10dp"

            />
        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_700"
            android:text="@string/two"
            android:textStyle="bold"
            android:textSize="25sp"
            android:padding="20dp"
            android:layout_marginHorizontal="10dp"

            />
        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_700"
            android:text="@string/three"
            android:textStyle="bold"
            android:textSize="25sp"
            android:padding="20dp"
            android:layout_marginHorizontal="10dp"
            />
        <Button
            android:id="@+id/buttonC"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/purple_100"
            android:padding="25dp"
            android:text="@string/C"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@color/purple_700"
            android:padding="20dp"
            android:text="@string/four"
            android:textSize="25sp"
            android:textStyle="bold"

            />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@color/purple_700"
            android:padding="20dp"
            android:text="@string/five"
            android:textSize="25sp"
            android:textStyle="bold"

            />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:background="@color/purple_700"
            android:padding="20dp"
            android:text="@string/six"
            android:textSize="25sp"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@color/purple_700"
            android:padding="20dp"
            android:text="@string/point"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"        >
        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_700"
            android:text="@string/seven"
            android:textStyle="bold"
            android:textSize="25sp"
            android:padding="20dp"
            android:layout_marginHorizontal="10dp"

            />
        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_700"
            android:text="@string/eight"
            android:textStyle="bold"
            android:textSize="25sp"
            android:padding="20dp"
            android:layout_marginHorizontal="10dp"

            />
        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_700"
            android:text="@string/nine"
            android:textStyle="bold"
            android:textSize="25sp"
            android:padding="20dp"
            android:layout_marginHorizontal="10dp"
            />
        <Button
            android:id="@+id/buttonmul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_700"
            android:text="@string/mul"
            android:textStyle="bold"
            android:textSize="25sp"
            android:padding="20dp"
            android:layout_marginHorizontal="10dp"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"           >
        <Button
            android:id="@+id/buttonsub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_700"
            android:text="@string/sub"
            android:textStyle="bold"
            android:textSize="25sp"
            android:padding="20dp"
            android:layout_marginHorizontal="10dp"

            />
        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_700"
            android:text="@string/zero"
            android:textStyle="bold"
            android:textSize="25sp"
            android:padding="20dp"
            android:layout_marginHorizontal="10dp"
            />

        <Button
            android:id="@+id/buttonadd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_700"
            android:text="@string/add"
            android:textStyle="bold"
            android:textSize="25sp"
            android:padding="20dp"
            android:layout_marginHorizontal="10dp"
            />
        <Button
            android:id="@+id/buttondiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_700"
            android:text="@string/div"
            android:textStyle="bold"
            android:textSize="25sp"
            android:padding="20dp"
            android:layout_marginHorizontal="10dp"

            />

    </LinearLayout>
    <LinearLayout
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp"
        >

    </LinearLayout>

    <Button
        android:layout_marginHorizontal="30dp"
        android:id="@+id/buttonEqual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_100"
        android:padding="20dp"
        android:text="@string/Equal"
        android:textSize="25sp"
        android:textStyle="bold" />

</LinearLayout>